work in progress

--- a/booking.ipynb
+++ b/booking.ipynb
@@ -26,40 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>590540</li>\n",
-       "\t<li>394</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 590540\n",
-       "\\item 394\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 590540\n",
-       "2. 394\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 590540    394"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = readRDS(\"../ieee-fraud-detection/train_transaction.rds\")\n",
-    "dict = iop::data2dict(file=\"../ieee-fraud-detection/dict.csv\")\n",
+    "data = readRDS(\"../booking//data.rds\")\n",
+    "dict = iop::data2dict(file=\"../booking/dict2.csv.csv\")\n",
     "##data = predict(dict, data)\n",
     "dim(data)"
    ]
