--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -72,9 +72,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Updating iop documentation\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing NAMESPACE\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading iop\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing NAMESPACE\n",
+      "✔  checking for file ‘/home/jovyan/d/ml/iop/DESCRIPTION’ (642ms)\n",
+      "─  preparing ‘iop’: (1.1s)\n",
+      "✔  checking DESCRIPTION meta-information ...\n",
+      "─  checking for LF line-endings in source and make files and shell scripts\n",
+      "─  checking for empty or unneeded directories\n",
+      "─  building ‘iop_0.0.0.9000.tar.gz’\n",
+      "   \n",
+      "Running /opt/conda/lib/R/bin/R CMD INSTALL \\\n",
+      "  /tmp/RtmphP7yIj/iop_0.0.0.9000.tar.gz --install-tests \n",
+      "* installing to library ‘/opt/conda/lib/R/library’\n",
+      "* installing *source* package ‘iop’ ...\n",
+      "** R\n",
+      "** byte-compile and prepare package for lazy loading\n",
+      "** help\n",
+      "*** installing help indices\n",
+      "** building package indices\n",
+      "** testing if installed package can be loaded\n",
+      "* DONE (iop)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reloading attached iop\n"
+     ]
+    }
+   ],
    "source": [
     "devtools::document()\n",
     "devtools::install()"
@@ -82,18 +136,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in fnb.check.args.model(x, y, priors, laplace, sparse, distribution): y does not have enough levels to classify.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in fnb.check.args.model(x, y, priors, laplace, sparse, distribution): y does not have enough levels to classify.\nTraceback:\n",
+      "1. iop::nbtree(tmp[, 1:4], tmp[, 5])",
+      "2. lapply(nodes, function(node) {\n .     sel = id_node == node\n .     xx = data[sel, ]\n .     x[is.na(x)] = 0\n .     yy = data[[\"y\"]][sel]\n .     NBTree[[node]] <<- fastNaiveBayes::fastNaiveBayes(x = xx, \n .         y = yy, priors = priors)\n . })",
+      "3. FUN(X[[i]], ...)",
+      "4. fastNaiveBayes::fastNaiveBayes(x = xx, y = yy, priors = priors)",
+      "5. fastNaiveBayes.default(x = xx, y = yy, priors = priors)",
+      "6. fnb.train(x, y, priors, laplace, sparse, check, distribution = distribution)",
+      "7. fnb.train.default(x, y, priors, laplace, sparse, check, distribution = distribution)",
+      "8. fnb.check.args.model(x, y, priors, laplace, sparse, distribution)",
+      "9. stop(\"y does not have enough levels to classify.\")"
+     ]
+    }
+   ],
+   "source": [
+    "tmp=iris[1:100,]\n",
+    "tmp[,5] = as.character(ifelse(tmp[,5]==\"setosa\",1,0))\n",
+    "iop::nbtree(tmp[,1:4], tmp[,5])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = data.frame(x=as.factor(iris$Species[1:100]),y=as.factor(iris$Species[100:1]))"
+    "?rpart::rpart"
    ]
   },
   {
